<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="logo_image">logo image</string>
    <string name="desired_league">Desired League:</string>
    <string name="men">Men&apos;s</string>
    <string name="women">Women&apos;s</string>
    <string name="next">Next</string>
    <string name="co_ed">Co-Ed</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team">Find a team in your city and dominate the league.</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="search_league_ex">Looking for a co-ed beginner league near you...</string>
</resources>
